# desktop-pet

./: .gitignore  LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
pets/: manifest.webmanifest  sw.js
pets/timi/: pet.json
src/: main.ts  native.ts  pet.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
