[package]
name = "timi-desktop-pet"
version = "0.1.0"
description = "A tiny cross-platform desktop pet"
authors = ["csoss"]
edition = "2021"
license = "MIT"

[lib]
name = "timi_desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
